--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-maps": "^1.4.0"
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-maps": "^1.4.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
